# latys

./: .clang-format  .clangd  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Options.cmake  Platform.cmake  Tests.cmake  Versioning.cmake
src/: main.cc  version.h.in
src/config/: config.h
src/networking/: packet.h  socket.cc  socket.h  virtual-interface.cc  virtual-interface.h
